# garage

./: LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/accounts/: admin.py  managers.py  models.py
backend/accounts/migrations/: 0001_initial.py
backend/api/: filters.py  mixins.py  permissions.py  serializers.py  urls.py  views.py
backend/data/: floor.json  garage.json  manufacturer.json  tags.json  users.json
backend/garage/: settings.py  urls.py
backend/sensors/: admin.py  models.py
backend/sensors/management/commands/: upload_data_to_db.py
backend/sensors/migrations/: 0001_initial.py  0002_remove_garage_floor_floor_garage_and_more.py  0003_delete_flooringarage_remove_room_owner_and_more.py
gateway/: Dockerfile  nginx.conf
