[tool.poetry]
name = "garage"
version = "0.1.0"
description = "Automatization for garage"
authors = [
	"Mikhail Ovsjannikov <rmlib.null@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rmlib0/garage" 

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
drf-extra-fields = "^3.7.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
djoser = "^2.2.0"
django-filter = "^23.2"
gunicorn = "^21.2.0"
django-phonenumber-field = "^7.1.0"
django-phonenumbers = "^1.0.1"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
